--- a/Humain_vs_Zombie/resources/config.json
+++ b/Humain_vs_Zombie/resources/config.json
@@ -31,7 +31,7 @@
 			"age": 35,
 			"size": 175,
 			"weight": 65,
-			"combat_capacity": 60,
+			"combat_capacity": 30,
            		"job": "Cleaning lady"
 			},
 			{
@@ -119,7 +119,7 @@
 			},
 			{
 			"id_zombie": 2,
-			"id_room": 3,
+			"id_room": 2,
 			"name": "Antoine",
 			"life": 100,
 			"aggressivity": 45,
@@ -127,7 +127,7 @@
 			},
 			{
 			"id_zombie": 3,
-			"id_room": 2,
+			"id_room": 3,
 			"name": "Raoul",
 			"life": 100,
 			"aggressivity": 95,
@@ -135,7 +135,7 @@
 			},
 			{
 			"id_zombie": 4,
-			"id_room": 1,
+			"id_room": 4,
 			"name": "Louis",
 			"life": 100,
 			"aggressivity": 55,
@@ -148,6 +148,14 @@
 			"life": 100,
 			"aggressivity": 75,
 			"size": 181
+			},
+			{
+			"id_zombie": 6,
+			"id_room": 2,
+			"name": "Chirac",
+			"life": 100,
+			"aggressivity": 64,
+			"size": 174
 			}		
 		]
 }
